plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'co.uzzu.dotenv.gradle' version('4.0.0')
}

group = 'com.waynehays'
version = '1.0.0'
description = 'Cloud storage pet project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-session-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-liquibase'
	implementation 'commons-io:commons-io:2.21.0'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	implementation 'io.minio:minio:8.6.0'
	implementation 'com.bucket4j:bucket4j_jdk17-core:8.17.0'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.2.3'
	implementation 'io.github.resilience4j:resilience4j-spring-boot4:2.4.0'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.aspectj:aspectjweaver'
	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	compileOnly 'org.projectlombok:lombok'

	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

	runtimeOnly 'org.postgresql:postgresql'

	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation platform('org.testcontainers:testcontainers-bom:1.21.4')
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:minio'
    testImplementation 'org.testcontainers:junit-jupiter'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
